--- a/index.html
+++ b/index.html
@@ -6,22 +6,24 @@
   <title>Resume/CV Builder Online</title>
 
   <!-- Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 
   <!-- Tailwind (CDN) -->
-  <script src="https://cdn.tailwindcss.com"></script>
   <script>
-    tailwind.config = {
+    tailwind = { config: {
       theme: { extend: {
         fontFamily: { inter: ['Inter','ui-sans-serif','system-ui'], poppins: ['Poppins','Inter','sans-serif'] }
       }},
       darkMode: 'class'
-    }
+    }};
   </script>
+  <script defer src="https://cdn.tailwindcss.com"></script>
 
   <!-- App CSS -->
   <link rel="stylesheet" href="style.css">
-  <meta name="description" content="Resume/CV Builder Online – isi form di kiri, lihat preview real‑time di kanan, export PDF, pilih tema & template.">
+  <meta name="description" content="Resume/CV Builder Online – isi form di kiri, lihat preview real-time di kanan, export PDF, pilih tema & template.">
 </head>
 <body class="font-inter bg-gray-50 text-gray-800 dark:bg-gray-900 dark:text-gray-100">
   <header class="sticky top-0 z-20 border-b bg-white/70 backdrop-blur dark:bg-gray-900/70">
@@ -30,7 +32,7 @@
         <span class="text-primary">🧰</span> Resume/CV Builder
       </h1>
       <div class="flex items-center gap-2">
-        <button id="darkToggle" class="px-3 py-1.5 rounded-lg border text-sm hover:bg-gray-100 dark:hover:bg-gray-800" title="Toggle Dark Mode">🌗 Mode</button>
+        <!-- <button id="darkToggle" class="px-3 py-1.5 rounded-lg border text-sm hover:bg-gray-100 dark:hover:bg-gray-800" title="Toggle Dark Mode">🌗 Mode</button> -->
         <button id="resetBtn" class="px-3 py-1.5 rounded-lg border text-sm hover:bg-gray-100 dark:hover:bg-gray-800" title="Reset form & hapus riwayat">↺ Reset</button>
         <button id="downloadBtn" class="px-3 py-1.5 rounded-lg bg-primary text-white text-sm rounded-xl shadow hover:opacity-90">⬇️ PDF</button>
       </div>
@@ -184,7 +186,7 @@
     <!-- Right: Preview -->
     <section>
       <div id="previewWrap" class="rounded-2xl border bg-white p-0 overflow-hidden dark:bg-gray-900 dark:border-gray-800">
-        <div id="cvPreview" class="preview theme-blue template-classic">
+        <div id="cvPreview" class="preview template-classic">
           <!-- Filled by JS -->
         </div>
       </div>
@@ -200,12 +202,10 @@
     <p>Made with ❤️ for portfolio showcasing. Data disimpan lokal di browser Anda.</p>
   </footer>
 
-  <!-- html2pdf & QRCode libs (CDN) -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/sortablejs@1.15.2/Sortable.min.js"></script>
+  <!-- Drag & drop (defer agar tidak blokir UI) -->
+  <script defer src="https://cdn.jsdelivr.net/npm/sortablejs@1.15.2/Sortable.min.js"></script>
 
   <!-- App JS -->
-  <script src="script.js"></script>
+  <script defer src="script.js"></script>
 </body>
 </html>
